# Muse

./: .gitignore  .gitpod.yml  AEB-README.md  BUILD_SUCCESS.md  CLEAN_START.sh  CLOUD_BUILD_GUIDE.md  COMPLETE_PROJECT_STATUS.md  CREATE_CUSTOM_UI.md  GITHUB_CODESPACES_GUIDE.md  ICON_LIBRARY_EXPANSION.md  INSTALLATION_AND_TESTING.md  MUSEOS_ARCHITECTURE.md  MUSEOS_BUILD_PLAN.md  MUSEOS_COMPLETE.md  PLACEHOLDER_ELIMINATION_REPORT.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  REAL_IMPLEMENTATION.md  ROADMAP.md  ROM_BUILD_GUIDE.md  SESSION_SUMMARY.md  TESTING_RESULTS.md  add-swap-home.sh  add-swap.sh  build-aeb.sh  build-museos-low-mem.sh  build-museos-single-thread.sh  build.gradle  codespaces-setup.sh  create-aeb-image.sh  create-avd.sh  download-full-aosp-auto.sh  download-full-aosp.sh  download-system-image.sh  enable-swap-final.sh  fix-museos-device-config.sh  gcp-setup-museos.sh  install-all.sh  install-launcher.sh  (+9 more)
.devcontainer/: devcontainer.json
MuseOS-AOSP/: README.md  build-museos-practical.sh  build-museos.sh  download-aosp.sh  install-dependencies.sh
MuseOS-AOSP/build-output/native/: CMakeLists.txt
MuseOS-AOSP/build-output/native/museos-ai/: ai_engine.cpp
MuseOS-AOSP/build-output/native/museos-core/: museos_core.cpp
MuseOS-AOSP/build-output/native/museos-glass/: glass_compositor.cpp
app/: build.gradle
docs/: ARCHITECTURE.md  INFINITEUI.md  INFINITEUI_ADVANCED.md  ROM_DISTRIBUTION.md  SDK_COMPONENTS.md
gaxialai/: build.gradle
infiniteui/: build.gradle
infiniteui-sdk/: README.md  build.gradle
libicon/: build.gradle
(+102 files in other folders)
